--- a/ChessNews/Base.lproj/Main.storyboard
+++ b/ChessNews/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="feedCell" id="LfC-0S-rQH">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="feedItemCell" id="LfC-0S-rQH">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LfC-0S-rQH" id="Jqg-fy-6fN">
@@ -46,7 +46,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Wgw-yk-Di6">
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Wgw-yk-Di6">
                                 <rect key="frame" x="51" y="162" width="74" height="81"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVC-ER-KE6">
@@ -106,14 +106,64 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Chess news" id="295-Qn-YgY"/>
-                    <connections>
-                        <outlet property="feedsStack" destination="Wgw-yk-Di6" id="zBL-nQ-sWx"/>
-                        <segue destination="4td-1Z-LCQ" kind="show" identifier="choose" id="7Y0-zf-RDk"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kxF-bA-Hal" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2705" y="357"/>
+        </scene>
+        <!--Chess news-->
+        <scene sceneID="WuS-d8-ntM">
+            <objects>
+                <collectionViewController id="7g7-Ko-bAZ" customClass="MainViewController" customModule="ChessNews" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="kj7-dc-eWZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VFJ-d5-7gj">
+                            <size key="itemSize" width="250" height="150"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="feedCell" id="QVV-BE-2dj" customClass="FeedCell" customModule="ChessNews" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="250" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="250" height="150"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NyF-0t-zxx">
+                                            <rect key="frame" x="0.0" y="120" width="250" height="30"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k3Q-Xh-BP3">
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="150"/>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <connections>
+                                    <outlet property="feedImageView" destination="k3Q-Xh-BP3" id="kZa-tf-dg9"/>
+                                    <outlet property="feedLabel" destination="NyF-0t-zxx" id="Vhb-Us-gxI"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="7g7-Ko-bAZ" id="ATD-8A-5Ik"/>
+                            <outlet property="delegate" destination="7g7-Ko-bAZ" id="QgC-Y5-OBu"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Chess news" id="YfB-TM-HSd"/>
+                    <connections>
+                        <segue destination="4td-1Z-LCQ" kind="show" identifier="choose" id="v9i-hN-QfC"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="402-on-0Ql" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2968" y="1073"/>
         </scene>
         <!--Live rankings - 2700chess.com-->
         <scene sceneID="Du9-OL-i8b">
@@ -204,7 +254,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="81h-Ge-9in" kind="relationship" relationship="rootViewController" id="KzG-bo-6xT"/>
+                        <segue destination="7g7-Ko-bAZ" kind="relationship" relationship="rootViewController" id="tIu-m5-IWE"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zsH-TC-ujt" userLabel="First Responder" sceneMemberID="firstResponder"/>
