--- a/ChessNews/Base.lproj/Main.storyboard
+++ b/ChessNews/Base.lproj/Main.storyboard
@@ -158,6 +158,7 @@
                     <connections>
                         <segue destination="Kzy-Ra-tOn" kind="relationship" relationship="viewControllers" id="obK-oB-Jfr"/>
                         <segue destination="Hup-eB-3S5" kind="relationship" relationship="viewControllers" id="acQ-my-RQb"/>
+                        <segue destination="a2K-ti-rZc" kind="relationship" relationship="viewControllers" id="VTQ-fb-xVz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NDk-u3-8Sd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -183,6 +184,36 @@
             </objects>
             <point key="canvasLocation" x="1893" y="357"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="rA4-7D-k6n">
+            <objects>
+                <tableViewController id="ze7-rX-ceI" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="6vr-Ua-5C1">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ktW-Ij-SAs">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ktW-Ij-SAs" id="KeA-H9-7Lh">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="ze7-rX-ceI" id="0cN-nF-8QT"/>
+                            <outlet property="delegate" destination="ze7-rX-ceI" id="wbW-US-8ba"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="jAW-sz-2qb"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ARN-8E-d7j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="766" y="1851"/>
+        </scene>
         <!--Rankings-->
         <scene sceneID="4xm-OF-HIK">
             <objects>
@@ -201,6 +232,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Va-3f-XUA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1383" y="1105"/>
+        </scene>
+        <!--Live games-->
+        <scene sceneID="KPt-Lm-HbM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="a2K-ti-rZc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Live games" id="muB-IV-pBN"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RB0-RY-YoX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ze7-rX-ceI" kind="relationship" relationship="rootViewController" id="oBP-ff-j6R"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3vf-eO-SA2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="605" y="1105"/>
         </scene>
     </scenes>
     <resources>
